# foiacquire

./: .gitignore  .jscpd.json  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.chromium  Dockerfile.chromium-stealth  Dockerfile.runtime  README.md  deny.toml  docker-compose.local.yml
.cargo/: config.toml
.github/: FUNDING.yml
.sqlx/: query-2c9bab6dafd377a16a0512b938f4d84556936f36e3c4bae139eb8f6289fc4d15.json  query-42e33c60ada77b2164f07e7d8613494d1f2a98b322cb07f3ab1ae41d3516ce7e.json  query-73974d010e650977de7724e9b0e13027ba353861d82862e1a981ed5fe5d8d28b.json  query-7ad36e02f4093e5c468baf1240eb40cf882bbe240912f37771c0867b29ec7296.json  query-9f0c6e183b2d4e0bf9317aad5230f942238392966331220b4814c56c91096546.json  query-a0362f9142423bdd72ca843d8af8e692b521a0dc0bcc87574e242f11742a8f3c.json  (+1 more)
crates/foiacquire-scrape/: Cargo.toml
crates/foiacquire-scrape/src/: cdx.rs  config.rs  google_drive.rs  lib.rs
crates/foiacquire-scrape/src/archive/: mod.rs  wayback.rs
crates/foiacquire-scrape/src/configurable/: api.rs  discovery.rs  fetch.rs  html_crawl.rs  mod.rs  stream.rs
crates/foiacquire-scrape/src/discovery/: config.rs  mod.rs  result.rs
crates/foiacquire-scrape/src/discovery/sources/: common_paths.rs  mod.rs  sitemap.rs  wayback.rs
crates/foiacquire-scrape/src/discovery/sources/search/: duckduckgo.rs
crates/foiacquire-scrape/src/discovery/term_extraction/: llm.rs
crates/foiacquire-scrape/src/services/: youtube.rs
crates/foiacquire-scrape/src/services/download/: mod.rs  types.rs  youtube_download.rs
docs/: commands.md  docker.md  (+2 more)
(+283 files in other folders)
