[package]
name = "foiacquire-scrape"
description = "Web scraping, discovery, and download services for foiacquire"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
foiacquire = { path = "../foiacquire", default-features = false }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
uuid = { workspace = true }

[features]
default = ["browser"]
browser = ["foiacquire/browser"]
redis-backend = ["foiacquire/redis-backend"]
